testdata/kind/yamls/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: default
  labels:
    app: minio
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: web
  selector:
    app: minio
